--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "fiap-react-17mob",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://henriqueplima.github.io/AulaReact/",
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "serve": "^11.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
